# yCard-fast

./: .gitignore  Cargo.toml  Makefile  README.md  STATUS.md  build-ci.sh  build-quick.sh  build.sh  example-simple.ycard  generate-code.js  schema.json  test-example.ycard  test-integration.js  test-structured.ycard
.github/workflows/: ci.yml
docs/: sdk-guide.md  spec.md
examples/: mixed-document.md  spanish-expected.ycard  spanish-input.ycard
tests/: test_english_aliases.ycard  test_english_extended.ycard  test_extended_fields.ycard  test_french_extended.ycard  test_french_simple.ycard  test_i18n.ycard  test_japanese_extended.ycard  test_ldif_support.ycard  test_polish.ycard  test_polish_complete.ycard  test_polish_simple.ycard  test_simple.ycard  test_simple_aliases.ycard  test_spanish_extended.ycard  test_spanish_simple.ycard
tests/cases/basic/: diagnostics.json  expected.ycard  input.ycard
tests/cases/localized/: expected.ycard  input.ycard
yabl-markdown/: Cargo.toml
yabl-markdown/src/: lib.rs
ycard-cli/: Cargo.toml
ycard-cli/src/: main.rs
ycard-core/: Cargo.toml  WASM_USAGE.md  test-browser.html  test-wasm.js
ycard-core/data/: aliases.fallback.json  aliases.fallback.json.old
ycard-core/src/: formatter.rs  generated_diagnostics.rs  generated_types.rs  i18n.rs  lib.rs  parser.rs  schema.rs  validator.rs  wasm.rs
ycard-grammar/: generated_keys.js  grammar.js  package.json
ycard-grammar/queries/: folds.scm  highlights.scm
ycard-lsp/: jest.config.json  package-lock.json  package.json  tsconfig.json
ycard-lsp/src/: generated_completions.ts  server.ts  ycard-wrapper.ts
ycard-ts/: jest.config.json  package-lock.json  package.json  tsconfig.json
ycard-ts/src/: core.ts  generated_types.ts  index.ts  types.ts
