[workspace]
members = [
    "ycard-core",
    "ycard-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
unicode-normalization = "0.1"
phonenumber = "0.3"
clap = { version = "4.0", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wasmtime = "15.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "s"