[package]
name = "ycard-core"
version = "0.1.0"
edition = "2021"
description = "Core yCard parser, normalizer, and formatter with WASM support"
license = "MIT"
repository = "https://github.com/yabl-lang/ycard-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
phonenumber = { workspace = true }
tracing = { workspace = true }

# WASM dependencies
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
iso8601 = "0.6"

# Text processing
regex = "1.10"
lazy_static = "1.4"

# Internationalization
icu_segmenter = { version = "1.4", optional = true }
icu_normalizer = { version = "1.4", optional = true }

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde-wasm-bindgen"]
icu = ["icu_segmenter", "icu_normalizer"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]